# weil-hackathon

Forking All/: README.md
Forking All/project_code/: package-lock.json  package.json
Forking All/project_code/app/: layout.tsx  page.tsx
Forking All/project_code/components/: ChatWindow.tsx  ConnectWallet.tsx  CounterPanel.tsx  DeployApplet.tsx  MessageInput.tsx  Sidebar.tsx  WalletGate.tsx
Forking All/project_code/contract/: Cargo.toml  bindings.rs  config.yaml  manifest.json  stocks.widl
Forking All/project_code/contracts/: bindings.ts
Forking All/project_code/lib/: constants.ts  promptBuilder.ts
Forking All/project_code/mcp_server/: Cargo.toml  arithmetic.widl
Forking All/project_code/mcp_server/src/: lib.rs
Forking All/project_code/services/: agent.ts  chatbot.ts  counter.ts  wallets.ts
Forking All/project_code/smart_contracts/: Cargo.toml  bindings.ts  chatbot.widl  context.json
Forking All/project_code/smart_contracts/src/: lib.rs
Forking All/project_code/test/xpecto/: Cargo.toml  bindings.rs
Forking All/project_code/test/xpecto/src/: lib.rs
