[package]
name = "stocks"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = { version = "1.0.140", features = ["raw_value"] }
chrono = "0.4"
urlencoding = "2.1"

# Weilliptic SDK
weil_rs = { path = "/Users/devbhaskar/Desktop/Dev/Weilliptic Template/adk/rust/weil_rs/" }
weil_macros = { path = "/Users/devbhaskar/Desktop/Dev/Weilliptic Template/adk/rust/weil_rs/weil_macros" }
weil_contracts = { path = "/Users/devbhaskar/Desktop/Dev/Weilliptic Template/adk/rust/weil_rs/weil_contracts" }

[lib]
crate-type = ["cdylib"]
